# ephemera

./: .gitignore  Cargo.toml  README.md  clippy.toml  contract.db  deny.toml  detect.sh  metrics.db
broadcast/: Cargo.toml  README.md  build.rs
broadcast/configuration/: config1.toml  config2.toml  config3.toml
broadcast/src/: cli.rs  main.rs  settings.rs
broadcast/src/app/signatures/: backend.rs  broadcast_callback.rs  callback.rs  file_backend.rs  mod.rs
broadcast/src/crypto/: ed25519.rs
broadcast/src/network/: broadcaster.rs  client_handler.rs  codec.rs  connection.rs  ephemera.rs  listener.rs  mod.rs  node.rs  peer_discovery.rs
broadcast/src/network/basic/: client_handler.rs  connection_handler.rs  listener.rs  mod.rs
broadcast/src/network/libp2p/: gossipsub.rs  mod.rs  swarm.rs
broadcast/src/protocol/: mod.rs  protocol_handler.rs
broadcast/src/protocol/gossip/: protocol.rs
broadcast/src/protocol/quorum_consensus/: mod.rs  protocol.rs  quorum_consensus_callback.rs
broadcast/src/protocol/quorum_consensus/test/: quorum_consensus_test.rs
broadcast/src/protocols/: mod.rs  protocol.rs  protocol_handler.rs
broadcast/src/protocols/implementations/: mod.rs
broadcast/src/protocols/implementations/gossip/: full_gossip.rs  mod.rs  protocol.rs
broadcast/src/protocols/implementations/quorum_consensus/: mod.rs  protocol.rs  quorum.rs  quorum_consensus.rs  quorum_consensus_callback.rs
broadcast/src/protocols/implementations/quorum_consensus/test/: config.toml  mod.rs  (+1 more)
client/: Cargo.toml
client/src/: cli.rs  command.rs  crypto.rs  lib.rs  libp2p2_crypto.rs
examples/cluster-http-api/: Cargo.toml  Dockerfile  README.md
examples/cluster-http-api/src/: cluster.rs  main.rs  node.rs  util.rs
examples/http-ws/: Cargo.toml  README.md
examples/http-ws-sync/: Cargo.toml
examples/http-ws-sync/src/: http_client.rs  main.rs  ws_listener.rs
examples/http-ws/src/: http_client.rs  main.rs  ws_listener.rs
examples/metrics-aggregator/: Cargo.toml  README.md
examples/metrics-aggregator/migrations/: V2__contract.sql
examples/metrics-aggregator/src/: epoch.rs  main.rs
examples/metrics-aggregator/src/contract/: http.rs  mod.rs
examples/metrics-aggregator/src/metrics/: mod.rs  types.rs
examples/metrics-aggregator/src/reward/: mod.rs
examples/metrics-aggregator/src/storage/: db.rs
examples/nym-api/: Cargo.toml  README.md
examples/nym-api/src/: epoch.rs  lib.rs
examples/nym-api/src/contract/: http.rs  mod.rs
examples/nym-api/src/metrics/: mod.rs
examples/nym-api/src/nym_api_ephemera/: application.rs  mod.rs  peer_discovery.rs
examples/nym-api/src/nym_api_ephemera/app/: application.rs  mod.rs  nym_peers.rs
examples/nym-api/src/nym_api_standalone/: mod.rs
examples/nym-api/src/peers/: mod.rs
examples/nym-api/src/reward/: mod.rs
examples/nym-api/src/reward/new/: aggregator.rs  mod.rs
examples/nym-api/src/reward/old/: mod.rs
examples/nym-api/src/storage/: db.rs
examples/signatures-app/: Cargo.toml  README.md
examples/signatures-app/src/: broadcast_callback.rs  main.rs
examples/signatures-app/src/backend/: file_backend.rs  mod.rs  websocket_backend.rs
node/: .gitignore  Cargo.toml  README.md
node/migrations/: V1__block.sql  V1__messages.sql
node/src/: ephemera.rs  lib.rs
node/src/api/: app_hook.rs  application.rs  mod.rs  queries.rs  send.rs  types.rs
node/src/api/http/: client.rs  mod.rs  query.rs  submit.rs
node/src/block/: builder.rs  callback.rs  manager.rs  message_pool.rs  mod.rs  producer.rs
node/src/block/types/: block.rs  message.rs  mod.rs
node/src/broadcast/: broadcast_callback.rs  broadcaster.rs  group.rs  mod.rs  quorum.rs  signing.rs
node/src/broadcast/basic/: broadcaster.rs  mod.rs  quorum.rs
node/src/broadcast/bracha/: broadcast.rs  broadcaster.rs  mod.rs  quorum.rs  topology.rs
node/src/broadcast_protocol/: broadcast.rs  mod.rs  protocol_handler.rs  quorum.rs
node/src/broadcast_protocol/backend/: mod.rs
node/src/broadcast_protocol/backend/websocket/: mod.rs  ws_backend.rs  wsmanager.rs
node/src/broadcast_protocol/signing/: mod.rs  signer.rs
node/src/broadcast_protocol/test/: broadcast.rs  config.toml
node/src/broadcast_protocol/websocket/: wsmanager.rs
node/src/cli/: config.rs  crypto.rs  init.rs  mod.rs  peers.rs  run_node.rs
node/src/config/: configuration.rs  mod.rs
node/src/core/: api_cmd.rs  builder.rs  ephemera.rs  mod.rs  shutdown.rs
node/src/crypto/: ed25519.rs  libp2p2_crypto.rs  mod.rs
node/src/database/: mod.rs  query.rs  store.rs
node/src/database/rocksdb/: mod.rs  query.rs  store.rs
node/src/database/sqlite/: mod.rs  query.rs  store.rs
node/src/http/: hello.rs  message.rs  mod.rs  query.rs  send.rs  submit.rs
node/src/logging/: mod.rs
node/src/network/: codec.rs  discovery.rs  ephemera.rs  group.rs  membership.rs  mod.rs  peer.rs  peer_discovery.rs  topology.rs
node/src/network/client_listener/: mod.rs
node/src/network/libp2p/: ephemera_behaviour.rs  ephemera_sender.rs  listener.rs  messages_channel.rs  mod.rs  network_sender.rs  peer_discovery.rs  sender.rs  swarm.rs  swarm_network.rs
node/src/network/libp2p/behaviour/: messages.rs
node/src/network/libp2p/behaviours/: broadcast_messages.rs  common_behaviour.rs  mod.rs  rendezvous.rs
node/src/network/libp2p/discovery/: mod.rs  rendezvous.rs  static.rs
node/src/network/members/: mod.rs
node/src/network/membership/: mod.rs
node/src/network/peer_discovery/: mod.rs
node/src/proto/: broadcast.proto
node/src/storage/: mod.rs
node/src/storage/rocksdb/: mod.rs  query.rs  store.rs
node/src/storage/sqlite/: mod.rs  query.rs  store.rs
node/src/utilities/: id_generator.rs  mod.rs
node/src/utilities/codec/: mod.rs
node/src/utilities/crypto/: ed25519.rs  key_manager.rs  keypair.rs  libp2p2_crypto.rs  mod.rs  peer.rs  signer.rs
node/src/utilities/encoding/: mod.rs  varint_async.rs  varint_bytes.rs
node/src/utilities/hash/: hasher.rs  mod.rs
node/src/utilities/id/: mod.rs
node/src/utilities/merkle/: mod.rs
node/src/utilities/time/: mod.rs
node/src/websocket/: ws_manager.rs
(+143 files in other folders)
