[workspace]

members = [
    "node",
    "tools/rocksdb-repl",
    "examples/http-ws",
    "examples/nym-api",
    "examples/cluster-http-api",
    "examples/peer_discovery_http",
]

default-members = [
    "node",
    "examples/http-ws",
    "examples/cluster-http-api",
    "examples/peer_discovery_http"
]

[profile.release]
#By default on Linux and macOS, symbol information is included in the compiled .elf
strip = true
#By default, Cargo specifies 16 parallel codegen units for release builds. This improves compile times, but prevents some optimizations.
#codegen-units = 1