[workspace]

members = [
    "node",
    "tools/rocksdb-repl",
    "examples/http-ws",
    "examples/nym-api",
    "examples/cluster-http-api",
    "examples/peer_discovery_http",
]

default-members = [
    "node",
    "examples/http-ws",
    "examples/cluster-http-api",
    "examples/peer_discovery_http"
]