[package]
name = "broadcast"
version = "0.1.0"
edition = "2021"


[dependencies]
pretty_env_logger = "0.4"
clap = { version = "4.0.26", features = ["derive"] }
config = { version = "0.13", default-features = false, features = ["toml"] }
thiserror = "1.0.37"
anyhow = "1.0.66"
log = "0.4.17"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tokio-util = { version = "0.7.4", features = ["full"] }
async-trait = "0.1.59"
futures = "0.3.18"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.89"
serde_derive = "1.0.149"
toml = "0.5.9"
prost = "0.11.2"
prost-types = "0.11.2"
bytes = "1.3.0"
ed25519-zebra = "3.1.0"
rand_chacha = { version = "0.3.1" }
hex = "0.4.3"
array-bytes = "6.0.0"
rand = "0.8.5"
lru = "0.8.1"
libp2p = { version = "0.50.0", features = ["tcp", "tokio", "mplex", "yamux", "noise", "plaintext", "gossipsub", "macros", "identify", "secp256k1"] }

[dev-dependencies]
uuid = { version = "1.2.2", features = ["v4"] }

[build-dependencies]
prost-build = "0.11.2"