[package]
name = "ephemera-client"
version = "0.1.0"
edition = "2021"


[dependencies]
ephemera = {path = "../node"}
tokio = {version = "1.0", features = ["net"]}
uuid = { version = "1.2.2", features = ["v4"] }
prost = "0.11.2"
prost-types = "0.11.2"
bytes = "1.3.0"
ed25519-zebra = "3.1.0"
clap = { version = "4.0.26", features = ["derive"] }
digest = { version = "0.10.3", default-features = false }
rand_chacha = { version = "0.3.1" }
hex = "0.4.3"
array-bytes = "6.0.0"
rand = "0.8.5"
libp2p = "0.50.0"