[package]
name = "ephemera-client"
version = "0.1.0"
edition = "2021"


[dependencies]
ephemera = {path = "../node"}
tokio = {version = "1.0", features = ["net"]}
tokio-stream = "0.1.11"
uuid = { version = "1.2.2", features = ["v4"] }
prost = "0.11.2"
prost-types = "0.11.2"
bytes = "1.3.0"
clap = { version = "4.0.26", features = ["derive"] }