[package]
name = "ephemera"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ephemera"
path = "bin/main.rs"

[dependencies]
actix-web = "4"
anyhow = "1.0.66"
array-bytes = "6.0.0"
async-trait = "0.1.59"
bytes = "1.3.0"
clap = { version = "4.0.32", features = ["derive"] }
config = { version = "0.13", default-features = false, features = ["toml"] }
chrono = "0.4.23"
dirs = "4.0.0"
ed25519-zebra = "3.1.0"
futures = "0.3.18"
futures-util = "0.3.25"
hex = "0.4.3"
log = "0.4.17"
libp2p = { version = "0.50.0", features = ["tcp", "tokio", "mplex", "yamux", "noise", "plaintext", "gossipsub", "macros", "identify", "secp256k1"] }
lru = "0.9.0"
thiserror = "1.0.37"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tokio-util = { version = "0.7.4", features = ["full"] }
pretty_env_logger = "0.4"
prost = "0.11.2"
prost-types = "0.11.2"
rand = "0.8.5"
rand_chacha = { version = "0.3.1" }
refinery = { version = "0.8.0", features = ["rusqlite"] }
rusqlite = "0.28.0"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0.149"
serde_json = "1.0.91"
toml = "0.5.9"
tokio-tungstenite = "0.18.0"
utoipa = { version = "2", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "2", features = ["actix-web"] }
uuid = { version = "1.2.2", features = ["v4"] }


[dev-dependencies]
uuid = { version = "1.2.2", features = ["v4"] }

[build-dependencies]
prost-build = "0.11.2"