[package]
name = "ephemera"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ephemera"
path = "bin/main.rs"

[dependencies]
actix-web = "4"
anyhow = "1.0.66"
array-bytes = "6.0.0"
async-trait = "0.1.59"
bytes = "1.3.0"
blake2 = "0.10.6"
cfg-if = "1.0.0"
clap = { version = "4.0.32", features = ["derive"] }
config = { version = "0.13", default-features = false, features = ["toml"] }
chrono = "0.4"
digest = "0.10.6"
dirs = "5.0.0"
futures = "0.3.18"
futures-timer = "3.0.2"
futures-util = "0.3.25"
bs58 = "0.4.0"
lazy_static = "1.4.0"
libp2p = { version = "0.51.0", features = ["gossipsub", "kad", "macros", "noise", "request-response", "serde", "tcp", "tokio", "yamux"] }
libp2p-identity = "0.1.0"
log = "0.4.14"
lru = "0.10.0"
thiserror = "1.0.37"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7.4", features = ["full"] }
parking_lot = "0.12.1"
pretty_env_logger = "0.4"
rand = "0.8.5"
rand_chacha = { version = "0.3.1" }
reqwest = { version = "0.11.6", features = ["json"] }
rocksdb = { version = "0.20.1", optional = true }
refinery = { version = "0.8.7", features = ["rusqlite"], optional = true }
rusqlite = { version = "0.28.0", features = ["chrono", "bundled"], optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0.149"
serde_json = "1.0.91"
toml = "0.7.0"
tokio-tungstenite = "0.18.0"
unsigned-varint = "0.7.1"
utoipa = { version = "3.0.1", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "3.0.2", features = ["actix-web"] }
uuid = { version = "1.2.2", features = ["v4"] }
void = "1.0.2"

[dev-dependencies]
assert_matches = "1.5.0"

[features]
default = ["sqlite_storage"]
rocksdb_storage = ["rocksdb"]
sqlite_storage = ["rusqlite", "refinery"]
