[package]
name = "ephemera-http-ws-example"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.69"
clap = { version = "4.0.26", features = ["derive"] }
ephemera = { path = "../../node" }
futures = "0.3.26"
log = "0.4.14"
pretty_env_logger = "0.4.0"
reqwest = { version = "0.11.6", features = ["json"] }
serde_json = "1.0.91"
tokio = { version = "1.0", features = ["net"] }
tokio-tungstenite = "0.18.0"
uuid = { version = "1.2.2", features = ["v4"] }
