[package]
name = "ephemera-http-ws-example"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.69"
ephemera = { path = "../../node" }
log = "0.4.14"
tokio = { version = "1.0", features = ["net"] }
clap = { version = "4.0.26", features = ["derive"] }
uuid = { version = "1.2.2", features = ["v4"] }
pretty_env_logger = "0.4.0"
futures = "0.3.26"
reqwest = { version = "0.11.6", features = ["json"] }
tokio-tungstenite = "0.18.0"
serde_json = "1.0.91"