[package]
name = "nym-api"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "nym_api_standalone"
path = "src/bin/nym_api_standalone.rs"

[[bin]]
name = "nym_api_ephemera"
path = "src/bin/nym_api_ephemera.rs"

[[bin]]
name = "reward_contract"
path = "src/bin/reward_contract.rs"


[dependencies]
ephemera = { path = "../../node" }
anyhow = "1.0.69"
bs58 = "0.4.0"
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.0.26", features = ["derive"] }
log = "0.4.17"
pretty_env_logger = "0.4.0"
rusqlite = { version = "0.28.0", features = ["chrono"] }
refinery = { version = "0.8.0", features = ["rusqlite"] }
rand = "0.8.5"
chrono = "0.4.23"
actix-web = "4"
reqwest = { version = "0.11.6", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0.149"
serde_json = "1.0.91"
tempfile = "3.3.0"
async-trait = "0.1.51"
dirs = "4.0.0"
uuid = { version = "1.3.0", features = ["serde", "v4"] }
array-bytes = "6.0.0"