[package]
name = "nym-api"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "nym_api_standalone"
path = "src/bin/nym_api_standalone.rs"

[[bin]]
name = "nym_api_ephemera"
path = "src/bin/nym_api_ephemera.rs"

[[bin]]
name = "reward_contract"
path = "src/bin/reward_contract.rs"

[dependencies]
actix-web = "4"
anyhow = "1.0.69"
array-bytes = "6.0.0"
async-trait = "0.1.51"
bs58 = "0.4.0"
chrono = { version = "0.4.24", default-features = false, features = ["clock"] }
clap = { version = "4.0.26", features = ["derive"] }
dirs = "5.0.0"
ephemera = { path = "../../node" }
lazy_static = "1.4.0"
log = "0.4.14"
pretty_env_logger = "0.4.0"
rand = "0.8.5"
refinery = { version = "0.8.7", features = ["rusqlite"] }
reqwest = { version = "0.11.6", features = ["json"] }
rusqlite = { version = "0.29.0" }
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0.149"
serde_json = "1.0.91"
tempfile = "3.3.0"
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.3.0", features = ["serde", "v4"] }
