[package]
name = "ephemera-signatures-app"
version = "0.1.0"
edition = "2021"


[dependencies]
ephemera = { path = "../../node" }
log = "0.4.17"
pretty_env_logger = "0.4"
clap = { version = "4.0.26", features = ["derive"] }
anyhow = "1.0.66"
thiserror = "1.0.38"
futures = "0.3.18"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.89"
serde_derive = "1.0.149"
tokio = { version = "1", features = ["full", "tracing"] }
async-trait = "0.1.59"
chrono = "0.4.23"
rusqlite = { version = "0.28.0", features = ["bundled"] }
refinery = { version = "0.8.7", features = ["rusqlite-bundled"] }
